--- a/src/components/products/Categorii.css
+++ b/src/components/products/Categorii.css
@@ -1,10 +1,17 @@
 .categories div {
-    width: 150px;
+    width: 170px;
     cursor: pointer;
     color: black;
-    margin-left: 15px;
+    margin-left: 50px;
+    font-size: 20px;
 }
 
 .categories div:hover {
    color: silver;
+}
+
+.products_main {
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 20px;
 }
