--- a/src/common/Navbar.css
+++ b/src/common/Navbar.css
@@ -1,3 +1,5 @@
+
+
 .container_navbar {
     width: 100%;
     height: 60px;
@@ -23,4 +25,8 @@
     text-decoration: none;
     font-weight: 600;
     margin: 0 20px 0 20px
+}
+.wish {
+    height: 25px;
+    margin-left: 10px
 }
