--- a/src/components/home/CarouselContainer.css
+++ b/src/components/home/CarouselContainer.css
@@ -5,9 +5,11 @@
 
 .carousel-caption {
     text-align: left;
-    padding-bottom: 300px;
+    padding-bottom: 340px;
     margin-left: -60px;
-    color: rgb(21, 21, 21);   
+    color: rgba(21, 21, 21, 0.84);   
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+
 }
 .carousel-inner {
     height: 550px;
@@ -17,4 +19,13 @@
     width: 100%;
     height: 550px !important;
     
+}
+.button {
+    background-color:rgba(128, 128, 128, 0.326);
+    border: 1px solid;
+    border-radius: 5px;
+    margin: -15px;
+}
+.description{
+    font-size: 18px;
 }
