--- a/src/components/home/ProdusePopulare.css
+++ b/src/components/home/ProdusePopulare.css
@@ -3,4 +3,5 @@
     flex-direction: column;
     align-items: center;
     margin-top: 70px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
