--- a/src/components/products/Categorii.css
+++ b/src/components/products/Categorii.css
@@ -8,10 +8,11 @@
 
 .categories div:hover {
    color: silver;
+   cursor: pointer;
 }
 
 .products_main {
     display: flex;
     justify-content: space-evenly;
-    margin-top: 20px;
+    margin-top: 100px;
 }
