--- a/src/components/wishlist/Wishlist.css
+++ b/src/components/wishlist/Wishlist.css
@@ -7,3 +7,10 @@ justify-content: space-between;
 .button_table {
     color: black;
 }
+.text{
+    text-align: center;
+}
+.img{
+    margin: auto;
+    width: 50vw;
+}
